--- a/css/style2.css
+++ b/css/style2.css
@@ -7,9 +7,9 @@ line-height: 100%;
 letter-spacing: 0%;
 color:#000000;
 }
-#banner-section{
+
     
-}
+
 .shop{
     font-family: 'Poppins';
 font-weight: 500;
@@ -36,4 +36,216 @@ font-size: 16px;
 line-height: 100%;
 letter-spacing: 0%;
 
+}
+
+.icon-section{
+    margin-left:90px;
+    padding-top: 27px;
+    padding-bottom: 27px;
+} 
+
+
+.filter-box {
+      background-color: white;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      padding: 6px 10px;
+      font-size: 14px;
+    }
+    .filter-input {
+      width: 47px;
+      height: 47px;
+      margin-top: -15px;
+      text-align: center;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      padding: 6px 8px;
+      font-size: 14px;
+      background-color: white;
+
+        font-family: 'Poppins';
+font-weight: 400;
+font-style: 'Regular';
+font-size: 20px;
+line-height: 100%;
+letter-spacing: 0%;
+color:#9F9F9F;
+    }
+    .filter-select {
+      width: 150px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      padding: 6px 12px;
+      font-size: 14px;
+      background-color: white;
+       height: 47px;
+      margin-top: -15px;
+      font-family: 'Poppins';
+font-weight: 400;
+font-style: 'Regular';
+font-size: 20px;
+line-height: 100%;
+letter-spacing: 0%;
+color:#9F9F9F;
+
+    }
+    .show-shortby{
+        padding-left:530px;
+    
+    }
+    .show{
+        padding-top:1px;
+        font-family: 'Poppins';
+font-weight: 400;
+font-style: 'Regula'r;
+font-size: 20px;
+line-height: 100%;
+letter-spacing: 0%;
+color:#000000;
+    }
+
+
+
+    #product-section h4{
+    font-family: 'Poppins';
+font-weight: 600;
+font-size: 24px;
+line-height: 120%;
+letter-spacing: 0%;
+color: #3A3A3A;
+}
+#product-section h2{
+    font-family: 'Poppins';
+font-weight: 700;
+font-size: 40px;
+line-height: 120%;
+letter-spacing: 0%;
+text-align: center;
+color:#3A3A3A;
+padding-top: 50px;
+padding-bottom: 20px;
+}
+
+#product-section p{
+font-family: 'Poppins';
+font-weight: 500;
+font-size: 16px;
+line-height: 120%;
+letter-spacing: 0%;
+color: #898989;
+}
+#product-section h5{
+    font-family: 'Poppins';
+font-weight: 600;
+font-size: 20px;
+line-height: 110%;
+letter-spacing: 0%;
+color: #3A3A3A;
+}
+
+
+.pagination {
+      gap: 16px; 
+    }
+    .pagination .page-link {
+      border: none;
+      border-radius: 8px;
+      background-color: #f9f3eb;
+      color: #000;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+      text-align: center;
+      box-shadow: none;
+    }
+    /* সংখ্যা বক্স (1,2,3) */
+    .pagination .page-item.number .page-link {
+      width: 48px;
+      height: 48px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+    }
+    /* Next বক্স */
+    .pagination .page-item.next .page-link {
+      padding: 10px 28px;
+    }
+    /* Active স্টেট */
+    .pagination .active > .page-link {
+      background-color: #b8860b; /* সোনালি */
+      color: #fff;
+      font-weight: 500;
+    }
+    .pagination .page-link:hover {
+      background-color: #eee5da;
+    }
+
+
+
+
+    .last-div{
+        padding-left: 40px;
+        background-color: #FAF3EA;
+        padding-top: 100px;
+         padding-bottom: 100px;
+    }
+    .last-div h4{
+        font-family: 'Poppins';
+font-weight: 600;
+font-size: 25px;
+line-height: 150%;
+letter-spacing: 0%;
+color:#242424;
+    }
+
+.last-div{
+    font-family: 'Poppins';
+font-weight: 500;
+font-size: 17px;
+line-height: 150%;
+letter-spacing: 0%;
+color:#898989;
+}    
+
+
+
+
+
+.ft{
+    font-family: 'Poppins';
+font-weight: 400;
+font-style: 'Regular';
+font-size: 16px;
+line-height:2;
+letter-spacing: 0%;
+color:#9F9F9F;
+}
+.ft-head{
+    font-family:'Poppins';
+font-weight: 500;
+font-style: Medium;
+font-size: 16px;
+line-height: 100%;
+letter-spacing: 0%;
+color:#9F9F9F;
+}
+.footer-link{
+    font-family:'Poppins';
+font-weight: 500;
+font-style: Medium;
+font-size: 16px;
+line-height: 100%;
+letter-spacing: 0%;
+color:#000000;
+text-decoration: none;
+}
+.lastp{
+    font-family: 'Poppins';
+font-weight: 400;
+font-style: Regular;
+font-size: 16px;
+line-height: 100%;
+letter-spacing: 0%;
+margin-left: 75px;
 }
